<resources>
    <string-array name="groups">
        <item>Выберите группу</item>
        <item>17-АУТП(асп)</item>
        <item>17-СЗИ(асп)</item>
        <item>17-ТД(асп)</item>
        <item>17-ТКТ(асп)</item>
        <item>17-УС(асп)</item>
        <item>18-АУТП(асп)</item>
        <item>18-МИМ(асп)</item>
        <item>18-ММ(асп)</item>
        <item>18-ПСЖД(асп)</item>
        <item>18-САПР(асп)</item>
        <item>18-СФ(асп)</item>
        <item>18-ТД(асп)</item>
        <item>18-ТКТ(асп)</item>
        <item>18-ТМ(асп)</item>
        <item>19-МИМ(асп)</item>
        <item>19-САПР(асп)</item>
        <item>19-СЗИ(асп)</item>
        <item>19-ТИМ(асп)</item>
        <item>19-ТКТ(асп)</item>
        <item>19-ТМ(асп)</item>
        <item>19-УС(асп)</item>
        <item>О-15-ИАС-аид-С</item>
        <item>О-15-ПТМК-пмк-С</item>
        <item>О-16-АТП-аутп-Б</item>
        <item>О-16-АТП-СПО</item>
        <item>О-16-БАС-боис-С</item>
        <item>О-16-ИАС-аид-С</item>
        <item>О-16-ИБ-ози-Б</item>
        <item>О-16-ИВТ-1-по-Б</item>
        <item>О-16-ИВТ-2-по-Б</item>
        <item>О-16-ИВТ-сапр-Б</item>
        <item>О-16-ИН-уис-Б</item>
        <item>О-16-ИСТ-истд-Б</item>
        <item>О-16-ИСТ-итпк-Б</item>
        <item>О-16-КТО-ат-Б</item>
        <item>О-16-КТО-тм-Б</item>
        <item>О-16-МАШ-отсп-Б</item>
        <item>О-16-МАШ-птл-Б</item>
        <item>О-16-МиР-мхт-Б</item>
        <item>О-16-МНТ-мрк-Б</item>
        <item>О-16-МНТ-эуп-Б</item>
        <item>О-16-МОА-тп-Б</item>
        <item>О-16-МПО-СПО</item>
        <item>О-16-МТМ-км-Б</item>
        <item>О-16-НТТС-птсо-С</item>
        <item>О-16-ПИ-пиэ-Б</item>
        <item>О-16-ПМ-дпм-Б</item>
        <item>О-16-ПРИ-рпс-Б</item>
        <item>О-16-ПРО-1-СПО</item>
        <item>О-16-ПРО-2-СПО</item>
        <item>О-16-ПСЖД-лк-С</item>
        <item>О-16-ПТМК-пмк-С</item>
        <item>О-16-РАД-рад-Б</item>
        <item>О-16-СиМ-смоп-Б</item>
        <item>О-16-ТБ-бтпп-Б</item>
        <item>О-16-ТиТ-птэ-Б</item>
        <item>О-16-ТМ-СПО</item>
        <item>О-16-ТМО-оип-Б</item>
        <item>О-16-ТТП-обд-Б</item>
        <item>О-16-УК-укс-Б</item>
        <item>О-16-УТС-уитс-Б</item>
        <item>О-16-ЭиН-мтэ-Б</item>
        <item>О-16-ЭиН-пэ-Б</item>
        <item>О-16-ЭиЭ-эиа-Б</item>
        <item>О-16-ЭК-1-эб-Б</item>
        <item>О-16-ЭК-2-эб-Б</item>
        <item>О-16-ЭК-ф-Б</item>
        <item>О-16-ЭМ-двс-Б</item>
        <item>О-16-ЭМ1-т-Б</item>
        <item>О-16-ЭМ2-т-Б</item>
        <item>О-16-ЭТТК-ах-Б</item>
        <item>О-16-ЭТТК-псжд-Б</item>
        <item>О-17-АТП-аутп-Б</item>
        <item>О-17-АТП-СПО</item>
        <item>О-17-БАС-боис-С</item>
        <item>О-17-БУХ-СПО</item>
        <item>О-17-ИАС-аид-С</item>
        <item>О-17-ИБ-ози-Б</item>
        <item>О-17-ИВТ-1-по-Б</item>
        <item>О-17-ИВТ-2-по-Б</item>
        <item>О-17-ИВТ-сапр-Б</item>
        <item>О-17-ИН-уис-Б</item>
        <item>О-17-ИСТ-истд-Б</item>
        <item>О-17-ИСТ-итпк-Б</item>
        <item>О-17-КТО-ат-Б</item>
        <item>О-17-КТО-тм-Б</item>
        <item>О-17-МАШ-ирм-Б</item>
        <item>О-17-МАШ-отсп-Б</item>
        <item>О-17-МАШ-птл-Б</item>
        <item>О-17-МиР-мхт-Б</item>
        <item>О-17-МНТ-мрк-Б</item>
        <item>О-17-МНТ-эуп-Б</item>
        <item>О-17-МОА-тп-Б</item>
        <item>О-17-МПО-СПО</item>
        <item>О-17-МТМ-км-Б</item>
        <item>О-17-НТТС-птсо-С</item>
        <item>О-17-ПИ-пиэ-Б</item>
        <item>О-17-ПМ-дпм-Б</item>
        <item>О-17-ПМ-нбм-Б</item>
        <item>О-17-ПРИ-рпс-Б</item>
        <item>О-17-ПРО-1-СПО</item>
        <item>О-17-ПРО-2-СПО</item>
        <item>О-17-ПСЖД-в-С</item>
        <item>О-17-ПСЖД-лк-С</item>
        <item>О-17-ПТМК-пмкс-С</item>
        <item>О-17-РАД-рад-Б</item>
        <item>О-17-СИМ-смоп-Б</item>
        <item>О-17-ТБ-бтпп-Б</item>
        <item>О-17-ТиТ-птэ-Б</item>
        <item>О-17-ТМ-СПО</item>
        <item>О-17-ТМО-оип-Б</item>
        <item>О-17-ТТП-обд-Б</item>
        <item>О-17-УК-укс-Б</item>
        <item>О-17-УТС-уитс-Б</item>
        <item>О-17-ЭиН-мтэ-Б</item>
        <item>О-17-ЭиН-пэ-Б</item>
        <item>О-17-ЭиЭ-эиа-Б</item>
        <item>О-17-ЭК-1-эб-Б</item>
        <item>О-17-ЭК-2-эб-Б</item>
        <item>О-17-ЭК-буа-Б</item>
        <item>О-17-ЭК-эпо-Б</item>
        <item>О-17-ЭМ-двс-Б</item>
        <item>О-17-ЭМ-т-Б</item>
        <item>О-17-ЭТТК-ах-Б</item>
        <item>О-17-ЭТТК-псжд-Б</item>
        <item>О-18-АТП-аутп-Б</item>
        <item>О-18-АТП-аутп-М</item>
        <item>О-18-АТП-СПО</item>
        <item>О-18-БАС-боис-С</item>
        <item>О-18-БУХ-СПО</item>
        <item>О-18-ИАС-аид-С</item>
        <item>О-18-ИБ-ози-Б</item>
        <item>О-18-ИВТ-1-по-Б</item>
        <item>О-18-ИВТ-2-по-Б</item>
        <item>О-18-ИВТ-сапр-Б</item>
        <item>О-18-ИН-уис-Б</item>
        <item>О-18-ИСТ-истд-Б</item>
        <item>О-18-ИСТ-итпк-Б</item>
        <item>О-18-КТО-ат-Б</item>
        <item>О-18-КТО-тм-Б</item>
        <item>О-18-КТО-тм-М</item>
        <item>О-18-МАШ-ирм-Б</item>
        <item>О-18-МАШ-отсп-Б</item>
        <item>О-18-МАШ-птл-Б</item>
        <item>О-18-МиР-мхт-Б</item>
        <item>О-18-МНТ-мрк-Б</item>
        <item>О-18-МНТ-эуп-Б</item>
        <item>О-18-МОА-тп-Б</item>
        <item>О-18-МПО-СПО</item>
        <item>О-18-МТМ-км-Б</item>
        <item>О-18-МТМ-км-М</item>
        <item>О-18-НТТС-птсо-С</item>
        <item>О-18-ПИ-кис-Б</item>
        <item>О-18-ПИ-цэ-Б</item>
        <item>О-18-ПМ-дпм-Б</item>
        <item>О-18-ПМ-нбм-Б</item>
        <item>О-18-ПРИ-рпс-Б</item>
        <item>О-18-ПРО-1-СПО</item>
        <item>О-18-ПРО-2-СПО</item>
        <item>О-18-ПРО-3-СПО</item>
        <item>О-18-ПСЖД-в-С</item>
        <item>О-18-ПСЖД-лк-С</item>
        <item>О-18-ПТМК-пмк-С</item>
        <item>О-18-РАД-рад-Б</item>
        <item>О-18-СИМ-смоп-Б</item>
        <item>О-18-ТБ-бтпп-Б</item>
        <item>О-18-ТиТ-птэ-Б</item>
        <item>О-18-ТМ-СПО</item>
        <item>О-18-ТМО-оип-Б</item>
        <item>О-18-ТМО-тоит-М</item>
        <item>О-18-ТТП-обд-Б</item>
        <item>О-18-УК-укс-Б</item>
        <item>О-18-УТС-уитс-Б</item>
        <item>О-18-ЭиН-мтэ-Б</item>
        <item>О-18-ЭиН-пэ-Б</item>
        <item>О-18-ЭиЭ-эиа-Б</item>
        <item>О-18-ЭК-буа-Б</item>
        <item>О-18-ЭК-ф-Б</item>
        <item>О-18-ЭМ-двс-Б</item>
        <item>О-18-ЭМ-т-Б</item>
        <item>О-18-ЭТТК-ах-Б</item>
        <item>О-18-ЭТТК-псжд-Б</item>
        <item>О-19-АТП-аутп-Б</item>
        <item>О-19-АТП-аутп-М</item>
        <item>О-19-АТП-СПО</item>
        <item>О-19-БАС-боис-С</item>
        <item>О-19-ИАС-аид-С</item>
        <item>О-19-ИБ-1-ози-Б</item>
        <item>О-19-ИБ-2-ози-Б</item>
        <item>О-19-ИВТ-1-по-Б</item>
        <item>О-19-ИВТ-2-по-Б</item>
        <item>О-19-ИВТ-ипо-М</item>
        <item>О-19-ИВТ-каид-М</item>
        <item>О-19-ИН-уип-М</item>
        <item>О-19-ИН-уис-Б</item>
        <item>О-19-ИНН-сми-М</item>
        <item>О-19-ИСТ-истд-Б</item>
        <item>О-19-ИСТ-истпо-М</item>
        <item>О-19-ИСТ-итпк-Б</item>
        <item>О-19-ИСТ-сапр-Б</item>
        <item>О-19-ИСТ-сапр-М</item>
        <item>О-19-КТО-ат-Б</item>
        <item>О-19-КТО-тм-Б</item>
        <item>О-19-КТО-тм-М</item>
        <item>О-19-МАШ-ирм-Б</item>
        <item>О-19-МАШ-отсп-Б</item>
        <item>О-19-МАШ-птл-Б</item>
        <item>О-19-МАШ-тлсп-М</item>
        <item>О-19-МиР-мхт-Б</item>
        <item>О-19-МНТ-эуп-Б</item>
        <item>О-19-МОА-тп-Б</item>
        <item>О-19-МПО-СПО</item>
        <item>О-19-МТМ-ирм-М</item>
        <item>О-19-МТМ-км-Б</item>
        <item>О-19-МТМ-км-М</item>
        <item>О-19-НТТС-птсо-С</item>
        <item>О-19-ПИ-кис-Б</item>
        <item>О-19-ПИ-рбп-М</item>
        <item>О-19-ПИ-цэ-Б</item>
        <item>О-19-ПМ-дпм-Б</item>
        <item>О-19-ПМ-дпм-М</item>
        <item>О-19-ПМ-нбм-Б</item>
        <item>О-19-ПМ-нбм-М</item>
        <item>О-19-ПРИ-ппс-М</item>
        <item>О-19-ПРИ-рпс-Б</item>
        <item>О-19-ПРО-1-СПО</item>
        <item>О-19-ПРО-2-СПО</item>
        <item>О-19-ПРО-3-СПО</item>
        <item>О-19-ПРО-иис-Б</item>
        <item>О-19-РАД-рад-Б</item>
        <item>О-19-СиМ-смоп-Б</item>
        <item>О-19-СиМ-смоп-М</item>
        <item>О-19-ТБ-бтпп-Б</item>
        <item>О-19-ТиТ-икнп-Б</item>
        <item>О-19-ТиТ-птэ-Б</item>
        <item>О-19-ТиТ-птэ-М</item>
        <item>О-19-ТиТ-сгг-М</item>
        <item>О-19-ТМ-СПО</item>
        <item>О-19-ТМО-оип-Б</item>
        <item>О-19-ТМО-тоит-М</item>
        <item>О-19-ТТП-обд-Б</item>
        <item>О-19-УК-укс-Б</item>
        <item>О-19-УК-укс-М</item>
        <item>О-19-УТС-уитс-Б</item>
        <item>О-19-ЭиН-мтэ-Б</item>
        <item>О-19-ЭиН-пэ-Б</item>
        <item>О-19-ЭиН-пэ-М</item>
        <item>О-19-ЭиЭ-эиа-Б</item>
        <item>О-19-ЭиЭ-эпа-М</item>
        <item>О-19-ЭК-буа-Б</item>
        <item>О-19-ЭК-ф-Б</item>
        <item>О-19-ЭМ-двс-Б</item>
        <item>О-19-ЭМ-двс-М</item>
        <item>О-19-ЭМ-т-Б</item>
        <item>О-19-ЭМ-т-М</item>
        <item>О-19-ЭМ-эсту-Б</item>
        <item>О-19-ЭТТК-ах-Б</item>
        <item>О-19-ЭТТК-псжд-Б</item>
        <item>ОЗ-16-КТО-тм-Б</item>
        <item>ОЗ-17-ИБ-ози-Б</item>
        <item>ОЗ-17-КТО-тм-Б</item>
        <item>ОЗ-18-АТП-аутп-М</item>
        <item>ОЗ-18-ИБ-ози-Б</item>
        <item>ОЗ-18-ИБ-ози-М</item>
        <item>ОЗ-18-ИН-сми-М</item>
        <item>ОЗ-18-КТО-тм-Б</item>
        <item>ОЗ-18-КТО-тм-М</item>
        <item>ОЗ-18-ТБ-бтпп-М</item>
        <item>ОЗ-19-ИБ-ози-Б</item>
        <item>ОЗ-19-ИБ-ози-М</item>
        <item>ОЗ-19-ИН-сми-М</item>
        <item>ОЗ-19-КТО-тм-Б</item>
        <item>ОЗ-19-КТО-тм-М</item>
        <item>ОЗ-19-ТБ-бтпп-М</item>
        <item>З-17-ПСЖД(асп)</item>
        <item>З-17-ТБ(асп)</item>
        <item>З-17-ТМ(асп)</item>
        <item>З-17-УС(асп)</item>
        <item>З-17-ЭКС(асп)</item>
        <item>З-18-АУТП(асп)</item>
        <item>З-18-ПСЖД(асп)</item>
        <item>З-18-ПТМ(асп)</item>
        <item>З-18-СУКП(асп)</item>
        <item>З-18-ТМ(асп)</item>
        <item>З-18-УС(асп)</item>
        <item>З-19-АУТП(асп)</item>
        <item>З-19-МИМ(асп)</item>
        <item>З-19-ПСЖД(асп)</item>
        <item>З-19-СЗИ(асп)</item>
        <item>З-19-ТБ(асп)</item>
        <item>З-19-ТИМ(асп)</item>
        <item>З-19-ТКТ(асп)</item>
        <item>З-19-УС(асп)</item>
    </string-array>
    <string name="title_archive">Архив чатов</string>
    <string name="title_chats_bgtu">Сообщения</string>
    <string name="tittle_timetable_fragment">Расписание</string>
    <string name="title_profile_fragment">Профиль</string>
    <string name="register_group">Группа:</string>
    <string name="register_isProfessor">Я преподаватель</string>
    <string name="register_hint_firstName">Имя</string>
    <string name="register_hint_lastName">Фамилия</string>
    <string name="register_btn_text">Зарегистрироваться</string>
    <string name="register_hint_email">E-mail</string>
    <string name="register_hint_password">Пароль</string>
    <string name="login_btn_text">Войти</string>
</resources>